# Tokenizer

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
src/: main.cpp
src/interface/: MainWindow.cpp  MainWindow.h
src/tokenizer/: Tokenizer.cpp  Tokenizer.h
src/util/: Error.h  Token.cpp  Token.h
